<resources>

    <string name="app_name">Find My Internship</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="image_content_description">Un Android avec un chien</string>
    <string name="student_account">Etudiant</string>
    <string name="company_account">Entreprise</string>
    <string name="email">Adresse email</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Se connecter</string>
    <string name="action_settings">Menu</string>
    <string name="school_name">Polytech Marseille</string>
    <string name="Mail">E-mail :</string>
    <string name="Password">Mot de Passe :</string>
    <string name="Connexion">Connexion</string>
    <string name="Name">Nom :</string>
    <string name="FirstName">Prénom :</string>
    <string name="Schoolcompany">Ecole / Entreprise</string>
    <string name="Status">Vous êtes :</string>
    <string name="AStudent">Ecole :</string>
    <string name="ACompany">Entreprise :</string>
    <string name="Register">Inscription</string>
    <string name="Validate">Valider</string>
    <string name="Cancel">Annuler</string>
    <string name="Confirm">Confirmez :</string>
     <string-array name="student_array">
        <item>Profil</item>
        <item>Mes Annonces</item>
        <item>Rechercher</item>
        <item>Mon Compte</item>
        <item>Aide</item>
    </string-array>
    
      <string-array name="company_array">
        <item>Profil</item>
        <item>Offres</item>
        <item>Candidatures</item>
        <item>Mon Compte</item>
        <item>Aide</item>
    </string-array>
     
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title">Titre</string>
    <string name="description">Description</string>
    <string name="skills">Compétences</string>
    <string name="profile">Profil</string>
    <string name="duration">Durée</string>
    <string name="salary">Salaire</string>
    
</resources>