<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="35dp"
            android:text="@string/FirstName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/FN_editt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignLeft="@+id/LN_edit"
            android:ems="10" />

        <EditText
            android:id="@+id/Mail_Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/test"
            android:layout_alignLeft="@+id/FN_editt"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="32dp"
            android:text="@string/Mail"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/test"
            android:layout_below="@+id/test"
            android:layout_marginTop="38dp"
            android:text="@string/Status"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView_unvisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textView4"
            android:layout_below="@+id/checkBoxCompany"
            android:layout_marginTop="64dp"
            android:text="TextView"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/checkBoxStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Mail_Edit"
            android:layout_below="@+id/textView4"
            android:text="@string/company_account"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/checkBoxCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/checkBoxStudent"
            android:layout_below="@+id/checkBoxStudent"
            android:text="@string/student_account"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="32dp"
            android:text="@string/Name"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/LN_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView2"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@+id/textView1"
            android:ems="10" />

        <EditText
            android:id="@+id/TextField_unvisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView_unvisible"
            android:layout_alignLeft="@+id/checkBoxCompany"
            android:ems="10" />

        <Button
            android:id="@+id/buttonCancelRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonValidRegister"
            android:layout_alignBottom="@+id/buttonValidRegister"
            android:layout_toRightOf="@+id/textView_unvisible"
            android:text="@string/Cancel" />

        <Button
            android:id="@+id/buttonValidRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/TextField_unvisible"
            android:layout_below="@+id/TextField_unvisible"
            android:layout_marginTop="56dp"
            android:text="@string/Validate" />

    </RelativeLayout>

</LinearLayout>
