<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LN_edit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="39dp"
            android:text="@string/Password"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/LN_edit"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Company_description"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:ems="10"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/FN_edit"
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/LN_edit"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="65dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/Company_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="86dp"
            android:text="@string/Mail"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Connexion_button"
            android:layout_alignBottom="@+id/Connexion_button"
            android:layout_marginRight="46dp"
            android:layout_toLeftOf="@+id/Connexion_button"
            android:text="@string/Register" />

        <Button
            android:id="@+id/Connexion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="28dp"
            android:layout_marginRight="30dp"
            android:text="@string/Connexion" />

    </RelativeLayout>
    
  
    
</LinearLayout>